# tauri-plugin-polodb

./: Cargo.toml  LICENSE  README.md  build.rs  package.json
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
guest-js/: commands.ts  index.ts  types.ts  wrapper.ts
permissions/: default.toml  list-databases.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: close-database.toml  close_database.toml  delete_all.toml  delete_one.toml  find_all.toml  find_one.toml  insert.toml  insert_document.toml  insert_one.toml  list-databases.toml  list_collections.toml  list_databases.toml  open-database.toml  open_database.toml  update.toml  update_all.toml  update_one.toml
permissions/schemas/: schema.json
polodb-example/: package.json
polodb-example/src/: App.tsx
polodb-example/src-tauri/: Cargo.toml  tauri.conf.json
polodb-example/src-tauri/capabilities/: default.json
polodb-example/src-tauri/src/: lib.rs  main.rs
src/: commands.rs  daemon.rs  desktop.rs  error.rs  lib.rs  mobile.rs
tauri-plugin-polodb/: Cargo.toml  README.md  package.json
tauri-plugin-polodb/examples/tauri-app/: package.json
tauri-plugin-polodb/examples/tauri-app/src/: App.svelte
tauri-plugin-polodb/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-polodb/guest-js/: index.ts
tauri-plugin-polodb/src/: commands.rs  lib.rs
