[package]
name = "tauri-plugin-polodb"
version = "0.1.0"
authors = [ "Dax Harris" ]
description = ""
edition = "2021"
rust-version = "1.71"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-polodb"

[dependencies]
tauri = { version = "2.0.0-rc.8" }
serde = "1.0"
thiserror = "1.0"
polodb_core = "5.1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.7", features = ["build"] }
